--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,35 +32,40 @@
         <img src="/images/logo_bouton_vert.png" class="bouton_principal" id="imageCliquable">
     </div>
         
-    <script>
-        // Sélectionnez le bouton par son ID
-        const bouton = document.getElementById('imageCliquable');
-        const canvas = document.getElementById('canvasElement');
-        const context = canvas.getContext('2d');
+    <!-- Ajoutez cet élément <a> dans votre HTML -->
+<a id="downloadLink" style="display:none"></a>
 
-        // Ajoutez un écouteur d'événement pour le clic
-        bouton.addEventListener('click', function() {
-            // Affichez le canvas et copiez le contenu vidéo dans le canvas
-            canvas.style.display = 'block';
-            context.drawImage(video, 0, 0, canvas.width, canvas.height);
+<script>
+    const bouton = document.getElementById('imageCliquable');
+    const canvas = document.getElementById('canvasElement');
+    const context = canvas.getContext('2d');
+
+    bouton.addEventListener('click', function() {
         
-        // Convertissez le contenu du canvas en une image
+        context.drawImage(video, 0, 0, canvas.width, canvas.height);
+        
         const image = canvas.toDataURL('image/png');
         
-        // Créez un nouvel élément d'image pour afficher l'image capturée (vous pouvez également l'envoyer au serveur ou la télécharger)
         const capturedImage = document.createElement('img');
         capturedImage.src = image;
-        document.body.appendChild(capturedImage);  // Ajoutez l'image capturée au corps de la page (ou où vous le souhaitez)
+        capturedImage.id = 'fullScreenImage';  // Ajoutez un ID pour cibler l'image en CSS
+        document.body.appendChild(capturedImage);
+
+        // Ajoutez la classe pour centrer l'image
+        capturedImage.classList.add('centeredImage');
+
+        const downloadLink = document.getElementById('downloadLink');
+        downloadLink.href = image;
+        downloadLink.download = 'captured-image.png';
+        downloadLink.click();
     });
+    video.addEventListener('loadedmetadata', function() {
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+    });
+</script>
 
-        // Assurez-vous que le canvas ait la même taille que la vidéo
-        video.addEventListener('loadedmetadata', function() {
-            canvas.width = video.videoWidth;
-            canvas.height = video.videoHeight;
-});
-
-
-    </script>    
+   
 
     <div class="vertical-line"></div>
     <div class="horizontal-line"></div>
