debut du responsive
mobile first

--- a/public/styles/info_resultat.css
+++ b/public/styles/info_resultat.css
@@ -5,6 +5,7 @@
     font-style: normal;
 }
 
+/* MOBILE */
 body{
     font-family: 'Coolvetica', sans-serif;
 }
@@ -118,4 +119,10 @@ h2{
 
 .hide{
     display: none;
+}
+
+
+/* PC */
+@media screen and (min-width: 1280px) {
+    
 }
