--- a/views/index.ejs
+++ b/views/index.ejs
@@ -83,7 +83,7 @@
             canvas.height = video.videoHeight;
         });
     </script>
-    <div class="info_container" id="info_container"> <!-- show/hide pour montre/cacher les infos des animaux -->
+    <div class="info_container hide" id="info_container"> <!-- show/hide pour montre/cacher les infos des animaux -->
         <!-- optimiser le code: répétition de row -->
         <div class="column">
             <div class="row">
@@ -126,8 +126,5 @@
     </div>
     <div id="overlay"></div>
     <script src="/scripts/infos_animaux.js"></script>
-
-
-
 </body>
 </html>
