--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,9 +44,9 @@
             <div class="row">
                 <div class="column">
                     <h2 class="petit-txt">Nom Latin</h2>
-                    <div class="container_info"><% apiData.title %></div>
+                    <div class="container_info"></div>
                     <h2 class="petit-txt">Famille</h2>
-                    <div class="container_info"><% apiData.title %></div>
+                    <div class="container_info"></div>
                 </div>
                 <div class="separateur"></div>
                 <div class="column">
